--- a/notebooks/roman2020.Rmd
+++ b/notebooks/roman2020.Rmd
@@ -1023,7 +1023,7 @@ Based on the data, we assume the following structural model:
 
 $$RAX_{ij} = Bernoulli(p_{ij})$$
 $$\begin{aligned}
-logit(p_{ij}) &= \beta_0 + \beta_{ax}\text{ax_only}_i + \beta_{dx}\text{dx_only}_i + \beta_{dxax}\text{dxax}_i +\\
+logit(p_{ij}) &= \beta_0 + \beta_{0i} + \beta_{ax}\text{ax_only}_i + \beta_{dx}\text{dx_only}_i + \beta_{dxax}\text{dxax}_i +\\
 &\beta_{noise_L}\text{noise}_i + \beta_{noise_Q}\text{noise}_i +\\
 &\beta_{no}\text{no}_i + \mathbf{\beta_{demo}X_{demo,i}} + \beta_{state} \text{state}_{ij}
 \end{aligned}$$
@@ -1597,7 +1597,7 @@ Based on the data, we assume the following structural model:
 
 $$RDX_{ij} = Bernoulli(p_{ij})$$
 $$\begin{aligned}
-logit^{-1}(p_{ij}) &= \beta_0 + \beta_{ax}\text{ax_only}_i + \beta_{dx}\text{dx_only}_i + \beta_{dxax}\text{dxax}_i +\\
+logit(p_{ij}) &= \beta_0 + \beta_{0i} + \beta_{ax}\text{ax_only}_i + \beta_{dx}\text{dx_only}_i + \beta_{dxax}\text{dxax}_i +\\
 &\beta_{noise_L}\text{noise}_i + \beta_{noise_Q}\text{noise}_i +\\
 &\beta_{no}\text{no}_i + \mathbf{\beta_{demo}X_{demo,i}} + \beta_{state} \text{state}_{ij}
 \end{aligned}$$
@@ -2013,7 +2013,7 @@ gg_df %>%
     stat_summary(fun = median, geom = "point", shape = 23, size = 6) +
     scale_color_metro() +
     ylim(0, 1) +
-    labs(y = "scenario_completed", color = "AX:DX:Noise") +
+    labs(y = "RDX", color = "AX:DX:DXAX:Noise") +
     guides(alpha = F)
 
 # Remove the giant fits data frames
@@ -2139,27 +2139,35 @@ plot_df = actions %>%
   select(X1, id, user_id, study_condition, start_condition, num_optimal,
          state_idx, state_idx_rescaled,
          age_group, gender, robot_experience,
-         noise_level, noise_level_f, has_noise,
+         noise_level, noise_level_f, has_noise, suggestion_type,
          has_dx, has_ax, has_ax_only, has_dx_only, has_dxax,
          scenario_completed, num_actions, chose_ax)
 
-text_short(report(plot_df))
+# With these dropped levels, the suggestion_type variable is the same as the
+# boolean flags for each suggestion type
+plot_df$suggestion_type = droplevels(plot_df$suggestion_type)
+
+print(summary(plot_df %>%
+                mutate(chose_ax = factor(chose_ax),
+                       scenario_completed = factor(scenario_completed)) %>%
+                select(-X1, -id)
+))
 ```
 
 ## Data
 
 ```{r fig.height=7, fig.width=15}
+# Plot by the study condition
 gg_df =
   plot_df %>%
     mutate(noise_level = fct_rev(noise_level)) %>%
     mutate(chose_ax = factor(chose_ax)) %>%
     mutate(user_id = factor(user_id)) %>%
     mutate(chose_ax = fct_recode(chose_ax, no_follow="0", follow = "1")) %>%
-    mutate(.fill_column = paste(noise_level, !(study_condition == 'BASELINE'), sep = ":")) %>%
-    count(user_id, study_condition, .fill_column, chose_ax, num_actions, has_ax, has_dx, noise_level,
+    mutate(.fill_column = suggestion_type) %>%
+    count(user_id, study_condition, .fill_column, chose_ax, num_actions, has_ax_only, has_dx_only, has_dxax, noise_level,
           name = "num_follow_ax")
 
-# Plot by the study condition
 gg_df %>%
   ggplot(aes(user_id, num_follow_ax / num_actions, fill=chose_ax)) +
     geom_bar(stat="identity") +
@@ -2177,62 +2185,71 @@ gg_df %>%
     labs(y = "Fraction followed AX", fill = "noise:has_suggestions") +
     scale_fill_economist()
 
-# Visualize the data facetted by the variables that we care about
-p2 = gg_df %>%
+# Plot by suggestion type
+gg_df =
+  plot_df %>%
+    mutate(noise_level = fct_rev(noise_level)) %>%
+    mutate(chose_ax = factor(chose_ax)) %>%
+    mutate(user_id = factor(user_id)) %>%
+    mutate(chose_ax = fct_recode(chose_ax, no_follow="0", follow = "1")) %>%
+    count(user_id, suggestion_type, chose_ax, num_actions, noise_level,
+          name = "num_follow_ax")
+
+gg_df %>%
   filter(chose_ax == "follow") %>%
-  ggplot(aes(has_dx, num_follow_ax / num_actions, fill=.fill_column)) +
+  ggplot(aes(suggestion_type, num_follow_ax / num_actions, fill=suggestion_type)) +
     geom_boxplot() +
     geom_count() +
-    facet_grid(rows = vars(noise_level), labeller = label_both) +
+    facet_grid(cols = vars(noise_level), labeller = label_both) +
     labs(y = "Fraction followed AX") +
     scale_fill_economist() +
-    theme(legend.position = "right")
+    theme(legend.position = "bottom")
 
-p3 = gg_df %>%
+gg_df %>%
   filter(chose_ax == "follow") %>%
-  mutate(noise_level = fct_rev(noise_level)) %>%
-  ggplot(aes(noise_level, num_follow_ax / num_actions, fill=.fill_column)) +
+  ggplot(aes(noise_level, num_follow_ax / num_actions, fill=suggestion_type)) +
     geom_boxplot() +
     geom_count() +
-    facet_grid(cols = vars(has_dx), labeller = label_both) +
+    facet_grid(cols = vars(suggestion_type)) +
     labs(y = "Fraction followed AX") +
     scale_fill_economist() +
+    theme(legend.position = "bottom")
+
+p1 = gg_df %>%
+  filter(chose_ax == "follow") %>%
+  ggplot(aes(suggestion_type, num_follow_ax / num_actions)) +
+    geom_violin() +
+    geom_point(aes(color = paste(suggestion_type, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .2, height = 0)) +
+    stat_summary(fun = median, geom = "point", shape = 23, size = 6) +
+    scale_color_metro() +
+    ylim(0, 1) +
     legend_none()
 
-grid.arrange(p2, p3, ncol = 2)
-
-# Visualize also the variation in each of the three levels that we care about
 p2 = gg_df %>%
-  filter(chose_ax == 'follow') %>%
-  ggplot(aes(has_dx, num_follow_ax/num_actions)) +
+  filter(chose_ax == "follow") %>%
+  ggplot(aes(noise_level, num_follow_ax / num_actions)) +
     geom_violin() +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep=":"), size = 2)) +
-    stat_summary(fun.y = median, geom="point", shape=23, size = 6) +
+    geom_point(aes(color = paste(suggestion_type, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
+    stat_summary(fun = median, geom = "point", shape = 23, size = 6) +
     scale_color_metro() +
     ylim(0, 1) +
-    theme(legend.position = "right")
+    labs(color = "Type:Noise") +
+    theme(legend.position = "right") +
+    guides(size = F)
 
-p3 = gg_df %>%
-  filter(chose_ax == 'follow') %>%
-  ggplot(aes(noise_level, num_follow_ax/num_actions)) +
-    geom_violin() +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep=":"), size = 2)) +
-    stat_summary(fun.y = median, geom="point", shape=23, size = 6) +
-    scale_color_metro() +
-    ylim(0, 1) +
-    scale_x_discrete(limits = rev(levels(gg_df$noise_level))) +
-    legend_none()
-
-grid.arrange(p2, p3, ncol = 2)
+grid.arrange(p1, p2, ncol = 2)
 ```
 
 ## Model
 
 Based on the data, we assume the following structural model:
 
-$$cax_{ij} = Bernoulli(p_{ij})$$
+$$CAX_{ij} = Bernoulli(p_{ij})$$
 $$\begin{aligned}
-logit^{-1}(p_{ij}) &= \beta_0 + \beta_{0i} + \beta_{dx}\text{dx}_i + \beta_{noise}\text{noise}_i + \beta_{dx:noise}\text{dx}_i\text{noise}_i + \\
+logit(p_{ij}) &= \beta_0 + \beta_{0i} + \beta_{dx}\text{dx}_i +\\
+&\beta_{noise_L}\text{noise}_i + \beta_{noise_Q}\text{noise}_i +\\
 &\beta_{no}\text{no}_i + \mathbf{\beta_{demo}X_{demo,i}} + \beta_{state} \text{state}_{ij}
 \end{aligned}$$
 $$\begin{aligned}
@@ -2263,7 +2280,7 @@ saveModel(chose_ax.model.null)
 
 # The trend model to see if there is a trend in the noise level variable
 chose_ax.model.t = brm(
-  chose_ax ~ 0 + Intercept + (has_dxax + noise_level) + (age_group + robot_experience + gender) + num_optimal + state_idx_rescaled + (1 | user_id),
+  chose_ax ~ 0 + Intercept + (has_dx + noise_level) + (age_group + robot_experience + gender) + num_optimal + state_idx_rescaled + (1 | user_id),
   family = bernoulli,
   prior = c(set_prior("normal(0, 10)", class = "b"),
             set_prior("student_t(3, 0, 10)", class = "sd")),
@@ -2278,7 +2295,7 @@ saveModel(chose_ax.model.t)
 
 # The values model, to see if specific values of the noise level variable are significant
 chose_ax.model.v = brm(
-  chose_ax ~ 0 + Intercept + (has_dxax + noise_level_f) + (age_group + robot_experience + gender) + num_optimal + state_idx_rescaled + (1 | user_id),
+  chose_ax ~ 0 + Intercept + (has_dx + noise_level_f) + (age_group + robot_experience + gender) + num_optimal + state_idx_rescaled + (1 | user_id),
   family = bernoulli,
   prior = c(set_prior("normal(0, 10)", class = "b"),
             set_prior("student_t(3, 0, 10)", class = "sd")),
@@ -2301,14 +2318,27 @@ chose_ax.model.v = loadModel("chose_ax.model.v")
 Model fitting results:
 
 ```{r}
-# print(tidy_stan(chose_ax.model.null))
 print(performance::r2(chose_ax.model.null))
 
 # Print the parameters, and some initial diagnostics
-print(tidy_stan(chose_ax.model.t, effects = "fixed"))
+print(model_parameters(chose_ax.model.t,
+                       centrality = "median",
+                       ci = 0.89,
+                       ci_method = "hdi",
+                       test = c("pd", "rope"),
+                       rope_range = c(-0.055, 0.055),
+                       rope_ci = 1,
+                       effects = "fixed"))
 print(performance::r2(chose_ax.model.t))
 
-print(tidy_stan(chose_ax.model.v, effects = "fixed"))
+print(model_parameters(chose_ax.model.v,
+                       centrality = "median",
+                       ci = 0.89,
+                       ci_method = "hdi",
+                       test = c("pd", "rope"),
+                       rope_range = c(-0.055, 0.055),
+                       rope_ci = 1,
+                       effects = "fixed"))
 print(performance::r2(chose_ax.model.v))
 ```
 
@@ -2329,15 +2359,17 @@ plot(chose_ax.model.v$criteria$loo, main = "Values Model")
 
 # Include posterior predictive checks of the sampling (are sampling according
 # to the data that we actually have?)
-p2 = pp_check(chose_ax.model.t, type = "bars_grouped", group = "has_dxax", stat = "median") + ggtitle("t:has_dx")
-p3 = pp_check(chose_ax.model.t, type = "bars_grouped", group = "noise_level", stat = "median") + ggtitle("t:noise_level")
-grid.arrange(p2, p3, ncol = 2)
+p0 = pp_check(chose_ax.model.null, type = "bars", stat = "median") + ggtitle("null model")
+
+p1 = pp_check(chose_ax.model.t, type = "bars_grouped", group = "has_dx", stat = "median") + ggtitle("t:has_dx")
+p2 = pp_check(chose_ax.model.t, type = "bars_grouped", group = "noise_level", stat = "median") + ggtitle("t:noise_level")
+grid.arrange(p1, p2, p0, nrow = 2, ncol = 2)
 mcmc_intervals(as.matrix(chose_ax.model.t), regex_pars = "b_|^shape", prob = 0.90, prob_outer = 0.95) +
   ggtitle("Trends Model")
 
-p2 = pp_check(chose_ax.model.v, type = "bars_grouped", group = "has_dxax", stat = "median") + ggtitle("v:has_dx")
-p3 = pp_check(chose_ax.model.v, type = "bars_grouped", group = "noise_level_f", stat = "median") + ggtitle("v:noise_level")
-grid.arrange(p2, p3, nrow = 2)
+p1 = pp_check(chose_ax.model.v, type = "bars_grouped", group = "has_dx", stat = "median") + ggtitle("v:has_dx")
+p2 = pp_check(chose_ax.model.v, type = "bars_grouped", group = "noise_level_f", stat = "median") + ggtitle("v:noise_level")
+grid.arrange(p1, p2, p0, nrow = 2, ncol = 2)
 mcmc_intervals(as.matrix(chose_ax.model.v), regex_pars = "b_|^shape", prob = 0.90, prob_outer = 0.95) +
   ggtitle("Values Model")
 
@@ -2412,6 +2444,8 @@ p6 =
 grid.arrange(p1, p3, p5, p2, p4, p6, nrow = 2, ncol = 3)
 ```
 
+We are better able to recreate the data, if only marginally, with the model.
+
 ## Inference
 
 ```{r, eval=report_bayesfactors}
@@ -2433,35 +2467,31 @@ options(digits = 3)
 h_df = as_tibble(insight::get_parameters(chose_ax.model.t)) %>%
   transmute(
     Intercept = b_Intercept,
-    has_dx_test = -2 * b_has_dxax1,
+    has_dx_test = -2 * b_has_dx1,
     noise_levelL_test = b_noise_level.L,
     noise_levelQ_test = b_noise_level.Q
   )
 
 hyp_results = test_hypotheses(h_df, rope_values = c(-0.055, 0.055))
-print(hyp_results %>% select(Parameter, pd, HDI_low, HDI_high, ROPE_Percentage, ROPE_Equivalence) %>% as.matrix())
+print(hyp_results %>% as.matrix())
 
 h_df = as_tibble(insight::get_parameters(chose_ax.model.v)) %>%
   transmute(
     Intercept = b_Intercept,
-    has_dx_test = -2 * b_has_dxax1,
+    has_dx_test = -2 * b_has_dx1,
     noise_level1_test = b_noise_level_f1,
     noise_level2_test = b_noise_level_f2,
     noise_level3_test = - b_noise_level_f1 - b_noise_level_f2
   )
 
 hyp_results = test_hypotheses(h_df, rope_values = c(-0.055, 0.055))
-print(hyp_results %>% select(Parameter, pd, HDI_low, HDI_high, ROPE_Percentage, ROPE_Equivalence) %>% as.matrix())
+print(hyp_results %>% as.matrix())
 options(digits = 7)
 ```
 
 **Results**:
 
-1. Noise Level Linear
-    - Negative (negative slope) pd = 95.6%
-    - Median = -0.39, 89% CI [-0.75, -0.01]
-    - Small, Std.Median = 0.23
-    - 4.98% in ROPE (n.s.)
+Not really significant result of Linear noise.
 
 (The ROPE is defined as [-0.055, 0.055]. It is the range is suggested in the literature for logistic models and it corresponds to a probability range of 0.11. Therefore, a probability change of less than 0.055 is considered no different from a probability change of 0)
 
@@ -2474,8 +2504,7 @@ gg_df = plot_df %>%
     mutate(chose_ax = factor(chose_ax)) %>%
     mutate(user_id = factor(user_id)) %>%
     mutate(chose_ax = fct_recode(chose_ax, no_follow="0", follow = "1")) %>%
-    mutate(.fill_column = paste(noise_level, !(study_condition == 'BASELINE'), sep = ":")) %>%
-    count(user_id, study_condition, .fill_column, chose_ax, num_actions, has_ax, has_dx, noise_level,
+    count(user_id, chose_ax, num_actions, suggestion_type, has_dx, noise_level,
           name = "num_follow_ax")
 
 # Simulate predictions on new data
@@ -2491,19 +2520,37 @@ p_df =
             state_idx_rescaled = seq_range(state_idx_rescaled, n = 4),
             .model = chose_ax.model.v)
 
-fits_p_df = p_df %>% add_fitted_draws(chose_ax.model.v,
-                                      re_formula = NA,
-                                      seed = default_seed)
+fits_p_df = p_df %>%
+  add_fitted_draws(chose_ax.model.v, re_formula = NA, seed = default_seed) %>%
+  mutate(suggestion_type = ifelse(has_dx == F, "AX", "DXAX")) %>%
+  mutate(suggestion_type = factor(suggestion_type, levels = c("AX", "DXAX")))
 gc()
-# We don't want predicted draws because that's a raw count of ones and zeros; not the
-# probability distribution
-# preds_p_df = p_df %>% add_predicted_draws(scenario_completed.model.v)
 
-# Plot the posterior distributions
-rope_value = gg_df %>%
-  filter(chose_ax == 'follow', has_dx == F) %>%
-  summarise(.value = median(num_follow_ax / num_actions)) %>%
-  pull(.value)
+pars_p_df = chose_ax.model.t %>%
+  extract_draws(newdata = p_df %>% rename(noise_level = noise_level_f), re_formula = NA, nsamples = 100)
+gc()
+
+# Plot the posterior distributions. In each of the following, the reference ROPE band
+# can be marked based on 3 methods. Make sure to update that ROPE value baased on the
+# method that we want to display.
+
+# If centering ROPE on the posterior distributions. Here we center the ROPE around the posterior
+# predicted value for the AX condition
+preds_p_df = p_df %>%
+  add_predicted_draws(chose_ax.model.v, re_formula = NA)  %>% # 0, 1 predictions for each predicted value
+  ungroup() %>%
+  count(has_dx, noise_level_f, .prediction) %>%
+  mutate(suggestion_type = ifelse(has_dx == F, "AX", "DXAX")) %>%
+  mutate(suggestion_type = factor(suggestion_type, levels = c("AX", "DXAX")))
+rope_value = median(
+  preds_p_df %>%
+    filter(suggestion_type == "AX") %>%
+    spread(.prediction, n) %>%
+    mutate(.value = `1` / (`0` + `1`)) %>%
+    pull(.value)
+)
+gc()
+
 gg_df %>%
   filter(chose_ax == 'follow') %>%
   ggplot(aes(x = has_dx, y = num_follow_ax / num_actions)) +
@@ -2512,16 +2559,13 @@ gg_df %>%
               color = "transparent", fill = "white") +
     annotate("text", x = 0.5, y = rope_value, label = "ROPE", angle = 90) +
     stat_halfeye(aes(y = .value), data = fits_p_df, position = position_nudge(x = 0.1)) +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep = ":")), size = 2) +
-    stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
+    geom_point(aes(color = paste(has_dx, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
+    stat_summary(fun = median, geom = "point", shape = 23, size = 6) +
     scale_color_metro() +
     ylim(0, 1) +
-    labs(y = "follow_ax", color = "AX:DX:Noise")
+    labs(y = "CAX", color = "HasDX:Noise")
 
-rope_value = gg_df %>%
-  filter(chose_ax == 'follow', noise_level == "0.0") %>%
-  summarise(.value = median(num_follow_ax / num_actions)) %>%
-  pull(.value)
 gg_df %>%
   filter(chose_ax == 'follow') %>%
   mutate(noise_level = fct_rev(noise_level)) %>%
@@ -2531,75 +2575,124 @@ gg_df %>%
               color = "transparent", fill = "white") +
     annotate("text", x = 0.5, y = rope_value, label = "ROPE", angle = 90) +
     stat_halfeye(aes(y = .value, x = noise_level_f), data = fits_p_df, position = position_nudge(x = 0.1)) +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep = ":")), size = 2) +
-    stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
+    geom_point(aes(color = paste(has_dx, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
+    stat_summary(fun = median, geom = "point", shape = 23, size = 6) +
     scale_color_metro() +
     ylim(0, 1) +
-    labs(y = "follow_ax", color = "AX:DX:Noise")
+    labs(y = "CAX", color = "HasDX:Noise")
+
+# Create a plot to show the trend
+pars_p_df_X = pars_p_df$dpars$mu$fe$X[,c("Intercept", "noise_level.L")]
+pars_p_df_b = pars_p_df$dpars$mu$fe$b[,c("b_Intercept", "b_noise_level.L")]
+pars_p_df_y = pars_p_df_X %*% t(pars_p_df_b)
+pars_p_df_y = inv_logit_scaled(pars_p_df_y)
+p_df =p_df %>%
+  bind_cols(as_tibble(pars_p_df_y)) %>%
+  gather(key = ".sample", value = ".value", V1:V100) %>%
+  rename(noise_level = noise_level_f)
+gg_df %>%
+  filter(chose_ax == 'follow') %>%
+  mutate(noise_level = fct_rev(noise_level)) %>%
+  ggplot(aes(x = noise_level, y = num_follow_ax / num_actions)) +
+    geom_rect(ymin = rope_value-0.055, ymax = rope_value+0.055,
+              xmin = -Inf, xmax = Inf,
+              color = "transparent", fill = "white") +
+    annotate("text", x = 0.5, y = rope_value, label = "ROPE", angle = 90) +
+    stat_halfeye(aes(y = .value, x = noise_level_f), data = fits_p_df, position = position_nudge(x = 0.1)) +
+    geom_line(aes(y = .value, group = .sample, alpha = 0.3), data = p_df) +
+    geom_point(aes(color = paste(has_dx, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
+    stat_summary(fun = median, geom = "point", shape = 23, size = 6) +
+    scale_color_metro() +
+    ylim(0, 1) +
+    labs(y = "CAX", color = "HasDX:Noise") +
+    guides(alpha = F)
 
 # Remove the giant fits data frames
-rm(fits_p_df, p_df, gg_df)
+rm(preds_p_df) # If using the posterior-predictions-based ROPE
+rm(fits_p_df, pars_p_df, pars_p_df_b, pars_p_df_X, pars_p_df_y, p_df, gg_df)
 ```
 
-```{r eval=plot_posteriors}
-plot_df = actions %>%
-  filter(has_ax == T) %>%
-  select(X1, id, user_id, study_condition, start_condition, num_optimal,
-         state_idx, state_idx_rescaled,
-         age_group, gender, robot_experience,
-         noise_level, noise_level_f, has_noise, has_dx, has_ax,
-         scenario_completed, num_actions, chose_ax) %>%
-  mutate(scenario_completed = factor(scenario_completed)) %>%
-  mutate(scenario_completed = fct_recode(scenario_completed, Unresolved="0", Resolved = "1"),
-         has_dx = fct_recode(has_dx, "No DX"="FALSE", "DX"="TRUE"),
-         noise_level = fct_recode(noise_level, "Acc: 100%"="0.0", "Acc: 90%"="1.0", "Acc: 80%"="2.0"))
-
-eff = fixef(chose_ax.model.v)
+```{r eval=plot_paper_posteriors}
+eff = fixef(chose_ax.model.t)
+ax_eff = inv_logit_scaled(
+  eff["Intercept", "Estimate"]
+  + eff["has_dx1", "Estimate"]
+)
+dxax_eff = inv_logit_scaled(
+  eff["Intercept", "Estimate"]
+  - eff["has_dx1", "Estimate"]
+)
 
 gg_df = plot_df %>%
-  mutate(.fill_column = paste(noise_level, !(study_condition == 'BASELINE'), sep = ":")) %>%
-  count(user_id, study_condition, .fill_column, chose_ax, num_actions, has_dx, noise_level,
-        name = "num_chose_ax") %>%
-  mutate(estimate = -1) %>%
-  mutate(estimate = if_else(noise_level == "Acc: 100%", inv_logit_scaled(eff["noise_level_f1","Estimate"] + eff["Intercept", "Estimate"]), estimate)) %>%
-  mutate(estimate = if_else(noise_level == "Acc: 90%", inv_logit_scaled(eff["noise_level_f2","Estimate"] + eff["Intercept", "Estimate"]), estimate)) %>%
-  mutate(estimate = if_else(noise_level == "Acc: 80%", inv_logit_scaled(eff["Intercept", "Estimate"] - eff["noise_level_f1","Estimate"] - eff["noise_level_f2","Estimate"]), estimate)) %>%
+  mutate(chose_ax = factor(chose_ax)) %>%
+  mutate(chose_ax = fct_recode(chose_ax, no_follow="0", follow="1"),
+         has_dx = fct_recode(has_dx, "No DX"="FALSE", "DX"="TRUE"),
+         noise_level = fct_recode(noise_level, "Acc: 100%"="0.0", "Acc: 90%"="1.0", "Acc: 80%"="2.0")) %>%
+  count(user_id, suggestion_type, chose_ax, num_actions, has_dx, noise_level,
+        name = "num_follow_ax") %>%
+  mutate(estimate = ifelse(suggestion_type == "AX", ax_eff, -1)) %>%
+  mutate(estimate = ifelse(suggestion_type == "DXAX", dxax_eff, estimate))
+
+p1 = gg_df %>%
+  filter(chose_ax == "follow") %>%
+  ggplot(aes(suggestion_type, num_follow_ax / num_actions, group = suggestion_type, colour=suggestion_type)) +
+    geom_count(aes(colour = NULL)) +
+    geom_boxplot(aes(y = estimate)) +
+    scale_y_continuous(limits = c(0.0, 1.2), breaks = c(0.0, 0.5, 1.0)) +
+    labs(y = NULL, x = NULL) +
+    scale_colour_manual(values = c("#e51400", "#008a00", "#f0a30a", "#a4c400")) +
+    theme_economist_white(base_size = 13) +
+    theme(plot.background = element_rect(fill = "white"),
+          axis.title.y = element_blank()) +
+    legend_none()
+
+eff = fixef(chose_ax.model.v)
+noise_0_eff = inv_logit_scaled(eff["Intercept", "Estimate"] + eff["noise_level_f1","Estimate"])
+noise_1_eff = inv_logit_scaled(eff["Intercept", "Estimate"] + eff["noise_level_f2","Estimate"])
+noise_2_eff = inv_logit_scaled(eff["Intercept", "Estimate"] - eff["noise_level_f1","Estimate"] - eff["noise_level_f2","Estimate"])
+
+gg_df = gg_df %>%
+  mutate(estimate = if_else(noise_level == "Acc: 100%", noise_0_eff, estimate)) %>%
+  mutate(estimate = if_else(noise_level == "Acc: 90%", noise_1_eff, estimate)) %>%
+  mutate(estimate = if_else(noise_level == "Acc: 80%", noise_2_eff, estimate)) %>%
   mutate(noise_level = fct_rev(noise_level))
 
-gg_df %>%
-  filter(chose_ax == "1") %>%
-  ggplot(aes(noise_level, num_chose_ax / num_actions, group = noise_level, colour = noise_level)) +
+p2 = gg_df %>%
+  filter(chose_ax == "follow") %>%
+  ggplot(aes(noise_level, num_follow_ax / num_actions, group = noise_level, colour = noise_level)) +
     geom_hline(yintercept = inv_logit_scaled(eff["Intercept", "Estimate"]),
                size = .7, linetype = "dashed", color = "grey") +
     geom_count(aes(colour = NULL)) +
     geom_boxplot(aes(y = estimate)) +
     annotate("segment",
-             x = 3,
-             y = inv_logit_scaled(eff["noise_level_f1","Estimate"] + eff["Intercept", "Estimate"]),
-             xend = 2,
-             yend = inv_logit_scaled(eff["noise_level_f2","Estimate"] + eff["Intercept", "Estimate"]),
+             x = 3, y = noise_0_eff,
+             xend = 2, yend = noise_1_eff,
              colour = "black") +
     annotate("segment",
-             x = 1,
-             y = inv_logit_scaled(eff["Intercept", "Estimate"] - eff["noise_level_f1","Estimate"] - eff["noise_level_f2","Estimate"]),
-             xend = 2,
-             yend = inv_logit_scaled(eff["noise_level_f2","Estimate"] + eff["Intercept", "Estimate"]),
+             x = 1, y = noise_2_eff,
+             xend = 2, yend = noise_1_eff,
              color = "black") +
     annotate("text",
              x = 3.5,
-             y = inv_logit_scaled(eff["Intercept", "Estimate"] - 0.25),
+             y = inv_logit_scaled(eff["Intercept", "Estimate"] - 0.35),
              label = "Mean of all levels",
              angle = 90,
              group = NA,
              colour = "black") +
     scale_y_continuous(limits = c(0.0, 1.0), breaks = c(0.0, 0.5, 1.0)) +
-    labs(y = "Fraction of participants that resolved fault", x = NULL) +
-    scale_colour_manual(values = c("#d62728", "#2ca02c", "#ff7f0e")) +
+    labs(y = "RDX", x = NULL) +
+    scale_colour_manual(values = c("#e51400", "#008a00", "#f0a30a", "#a4c400")) +
     scale_size_area(max_size = 1) +
     theme_economist_white(base_size = 13) +
     theme(plot.background = element_rect(fill = "white"),
-          axis.title.y = element_blank()) +
+          axis.title.y = element_blank(),
+          axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) +
     legend_none()
+
+grid.arrange(p1, p2, nrow = 1, ncol = 2)
+rm(p1, p2)
 ```
 
 ```{r, echo=F, results=F, message=F, warning=F}
